# ksql-thanos

./: CHANGELOG.md  docker-compose.yaml  ksqldb-purge.cabal
app/: Main.hs
src/: Lib.hs
src/Control/Monad/Logger/: OrphanInstances.hs
src/Lib/: Core.hs
src/Lib/App/: Config.hs  Main.hs
src/Lib/Core/: Config.hs  ConfigLoader.hs  Ksql.hs  Purger.hs
src/Lib/Effects/: Client.hs  Console.hs  Ksql.hs
src/Lib/Ksql/: MonadKsql.hs
