cabal-version:      2.4
name:               ksqldb-purge
version:            0.1.0.0
author: vitoracle
maintainer: hellofromvitor@icloud.com

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-options
  build-depends:       base ^>= 4.16.4.0
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DerivingStrategies
                       DerivingVia
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       OverloadedLabels
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications
                       TypeFamilies
                       TypeOperators,
                       StandaloneDeriving,
                       TemplateHaskell

library
    import: common-options
    exposed-modules:  Lib, 
                      Lib.Core.Purger,
                      Lib.Core.Ksql,
                      Lib.Core.Config,
                      Lib.App.Main, 
                      Lib.App.Config, 
                      Lib.Effects.Client
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:     aeson,
                       mtl,
                       servant,
                       servant-client,
                       http-client,
                       lens,
                       data-has,
                       generic-lens,
                       deriving-trans,
                       monad-control,
                       monad-control-identity,
                       monad-logger,
                       transformers,
                       text

executable ksqldb-purge
    import: common-options
    main-is:          Main.hs
    build-depends:    ksqldb-purge
    hs-source-dirs:   app
    default-language: Haskell2010